--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Calculator</h1>
-    <h3>This is a calculator website to perform simple arithematic calculations</h3>
+    <h3>This is a calculator website to perform simple arithmatic calculations</h3>
     <div class="container">
         <form>
             <div class="calculator">
