--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 </div>
             </div>
         </form>
+        <div class="date">
+            <p>created on 28th july 2025</p>
+        </div>
     </div>
 </body>
 
